# ghana-tts-datagen

./: README.md  pyproject.toml
examples/: ghana_speech_datagen.ipynb  modal_run.py
ghana_speech_datagen/: __init__.py  __main__.py  cli.py  generator.py
ghana_tts_datagen/: __init__.py  cli.py  generator.py
notebooks/: ghana_speech_datagen.ipynb  ghana_tts_datagen.ipynb
tests/: test_core.py
