[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ghana-speech-datagen"
version = "0.1.0"
description = "Generate synthetic speech training data (TTS/ASR) from text datasets with the Ghana NLP Community VoxCPM model (ghana-tts-36k) — voice-cloned male/female speakers, parallel instances, resume."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "CC-BY-4.0" }
dependencies = [
    "voxcpm",
    "datasets>=2.19",
    "huggingface_hub>=0.23",
    "soundfile>=0.12",
    "librosa>=0.10",
    "numpy",
    "scipy",
    "tqdm",
    "torch",
    "torchaudio",
    "transformers",
    "tokenizers",
    "accelerate",
    "sentencepiece",
    "modelscope",
    "funasr",
]

[project.scripts]
ghana-speech-datagen = "ghana_speech_datagen.cli:main"

[tool.setuptools]
packages = ["ghana_speech_datagen"]

[tool.setuptools.package-data]
ghana_speech_datagen = ["speakers/*.wav", "speakers/*.txt"]
